# avogadro-super

./: .gitmodules  CMakeLists.txt  README
scripts/: vs2008.bat
